# Oberon0-Rust

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  VERSIONING.md  cspell.json
.github/: copilot-instructions.md  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: declarative-semantics-roadmap.md  io-builtin-contract.md  issue-26-expected-behavior.md  milestone-a-backlog.md  milestone-b-issue-backlog.md  milestone-b-roadmap.md  module-translation-workflow.md  oberon0-v1-subset.md  operator-type-compatibility-matrix.md  project-decisions.md  wirth-page63-alignment-matrix.md
examples/: README.md
examples/control-if-else/: README.md
examples/control-while/: README.md
examples/declarations-const-var/: README.md
examples/eof-check/: README.md
examples/expressions-basic/: README.md
examples/hello-app/: README.md  oberon.toml
examples/imports-manifest/: README.md  oberon.toml
examples/imports-qualified/: README.md  oberon.toml
examples/operators-extended/: README.md
examples/procedure-local-vars/: README.md
examples/procedures-nested-control/: README.md
examples/procedures-params/: README.md
examples/readint-basic/: README.md
examples/shadowing-nested-control/: README.md
examples/shadowing-procedure-scope/: README.md
scripts/: cargo-oberon0  changelog.sh  oberon0  release.sh
src/: ast.rs  codegen.rs  hir.rs  lower.rs  main.rs  manifest.rs  oberon0.pest  parser.rs  scanner.rs  scope.rs  semantic.rs  symbols.rs
(+109 files in other folders)
