[package]
name = "oberon0c"
version = "0.6.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/steven-r/Oberon0-Rust"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
logos = "0.16"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
